Fix banner spacing

--- a/style.css
+++ b/style.css
@@ -52,11 +52,17 @@ main {
         grid-template-rows: auto 12rem auto;
         grid-template-areas: "hero" "usp" "content";
     }
+    .banner {
+        margin-top: 3rem;
+    }
     h1 {
         font-size: 36pt;
     }
     nav>a {
         padding: 0px;
+    }
+    main {
+        margin-top: 0;
     }
     .payment-plan {
         margin: 1rem 0 1rem 0;
@@ -110,6 +116,7 @@ main {
     text-align: center;
     font-size: 3rem;
     padding: 0;
+    margin-top: 2.5rem;
     font-family: 'Righteous', cursive;
     text-shadow: var(--text-shadow);
 }
@@ -127,7 +134,7 @@ nav {
     background-color: var(--black);
     text-align: center;
     z-index: 5;
-    align-self: start
+    align-self: start;
 }
 
 nav>a, nav>p {
